--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
   margin: 0 auto;
 }
+
+.keyboard {
+  padding-top: 100px;
+  margin: 0 auto;
+  width: 660px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.key {
+  width: 40px;
+  height: 40px;
+  margin: 2px;
+  font-size: 14px;
+}
+
+.special-key {
+  width: 84px;
+}
+
+.whitespace {
+  width: 304px;
+}
