--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 body {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-input {
+  margin-top: 100px;
+  max-width: 650px;
+  width: 100%;
+  height: 100px;
 }
 
 .keyboard {
-  padding-top: 100px;
+  padding-top: 10px;
   margin: 0 auto;
   width: 660px;
   display: flex;
